--- a/donofy/requirements.txt
+++ b/donofy/requirements.txt
@@ -1,9 +1,11 @@
 asgiref==3.8.1
-decouple==0.0.7
 Django==3.2.25
 django-allauth==0.55.0
+django-crispy-forms==1.14.0
 oauthlib==3.2.2
+Pillow==7.0.0
 PyJWT==2.8.0
+python-decouple==3.8
 python3-openid==3.2.0
 pytz==2024.1
 requests-oauthlib==2.0.0
