--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.8.1
 coverage==7.5.3
 Django==3.2.25
 django-allauth==0.55.0
+django-countries==7.2.1
 django-crispy-forms==1.14.0
 oauthlib==3.2.2
 Pillow==7.0.0
