--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ Django==3.2.25
 django-allauth==0.55.0
 django-countries==7.2.1
 django-crispy-forms==1.14.0
+gunicorn==22.0.0
 kombu==5.3.7
 oauthlib==3.2.2
 Pillow==7.0.0
