--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 amqp==5.2.0
 asgiref==3.8.1
 billiard==4.2.0
+boto3==1.34.144
+botocore==1.34.144
 celery==5.4.0
 click==8.1.7
 click-didyoumean==0.3.1
@@ -12,7 +14,9 @@ Django==3.2.25
 django-allauth==0.55.0
 django-countries==7.2.1
 django-crispy-forms==1.14.0
+django-storages==1.14.4
 gunicorn==22.0.0
+jmespath==1.0.1
 kombu==5.3.7
 oauthlib==3.2.2
 Pillow==7.0.0
@@ -23,6 +27,7 @@ python3-openid==3.2.0
 pytz==2024.1
 redis==5.0.7
 requests-oauthlib==2.0.0
+s3transfer==0.10.2
 sqlparse==0.5.0
 stripe==10.1.0
 tzdata==2024.1
